Fixed memory leak in InterfacePtrSet::RemovePtr

Bug: 840949
Change-Id: Ied53a2d1cccb0a0c474d8b9cfb76bad1a8d83987
Reviewed-on: https://chromium-review.googlesource.com/1050581
Commit-Queue: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557618}
Former-commit-id: cc01dffa5e145abcfd2d60f8063375ca9f611d36